tests/paczka2/big_fuzzy/56415624.err
Error in line 3: S430 S430 48,1
Error in line 5: bY7XZetHsf A773 99,2
Error in line 7: S430 A773 81,6
Error in line 16: pUOes92Tc S430 34,9
Error in line 21: pUOes92Tc A838 -2,6
Error in line 19: pUOes92Tc A838 47,9
Error in line 31: bY7XZetHsf S430 54,4
Error in line 35: bY7XZetHsf A773 27,3
Error in line 45: uKi9b A773 82,5
Error in line 51: vnW A773 32,9
Error in line 42: S430 S430 164,5
Error in line 56: bY7XZetHsf A773 87,6
Error in line 79: LeL A838 80,1
Error in line 83: uKi]b S283 ]6,6
Error in line 81: LeL S430 22,5
Error in line 89: bY7XZetHsf A8.8 6.,2
Error in line 90: LeL A838 49,h
Error in line 84: uKi9b A773 22,0
Error in line 95: uKi9b S430 11,5
Error in line 102: S430 A773 62,2
Error in line 107: uKi9b S430 90,2
Error in line 112: vnW A838 21,3
Error in line 113: vnW S430 20,3
Error in line 117: vnW S283 64,2
Error in line 122: cpUi5Bf2DdW A773 32,0
Error in line 100: bY7XZetHsf A838 230,0
Error in line 119: vnW A773 12,9
Error in line 121: LeL S430 216,3
Error in line 147: vnW S283 308,1
Error in line 168: LeL A838 46,9
Error in line 169: cpUi5Bf2DdW S430 23,8
Error in line 179: uKi9b-S430-75,3
Error in line 185: vnW S283 -2,8
Error in line 184: uKi9b S430 272,6
Error in line 178: S430 S430 15,5
Error in line 193: S430 S283 48,7
Error in line 195: S430 A773 45,3
Error in line 190: uKi9b S283 70,6
Error in line 189: vnW S283 235,5
Error in line 214: S430 S283 15,3
Error in line 215: pUOes92Tc A773 99,5
Error in line 231: vnW S430 15,7
